8297285: Shenandoah pacing causes assertion failure during VM initialization

Signed-off-by: Ashutosh Mehra <asmehra@redhat.com>